--- a/prometheus.yml
+++ b/prometheus.yml
@@ -27,3 +27,7 @@ scrape_configs:
 
     static_configs:
       - targets: ["localhost:9090"]
+  
+  - job_name: "go-app"
+    static_configs:
+      - targets: ["go-app:8080"]
