--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,13 @@
 version: "3"
 
 services:
+  apisix:
+    image: apache/apisix:2.15.0-alpine
+    volumes:
+      - ./apisix/config.yml:/usr/local/apisix/conf/config.yaml:ro
+      - ./apisix/apisix.yml:/usr/local/apisix/conf/apisix.yaml:ro
+    ports:
+      - "9080:9080"
   go-app:
     build: ./go-app
     ports:
@@ -10,4 +17,4 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - ./:/etc/prometheus
+      - ./prometheus:/etc/prometheus
