--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,7 @@ services:
       - "9090:9090"
     volumes:
       - ./prometheus:/etc/prometheus
+  grafana:
+    image: grafana/grafana:9.3.0
+    ports:
+      - "3000:3000"
