--- a/apisix/config.yml
+++ b/apisix/config.yml
@@ -1,7 +1,7 @@
 apisix:
-  enable_admin: false
-  config_center: yaml
+  enable_admin: false # run APISIX in standalone mode
+  config_center: yaml # use a YAML file for configuration instead of storing it in etcd
 plugin_attr:
   prometheus:
-    export_uri: /prometheus/metrics
-    enable_export_server: false
+    export_uri: /prometheus/metrics # enable the prometheus Plugin and export the metrics to this URI
+    enable_export_server: false # export the metrics in the default data-plane port 
